2005-08-14  Kristian Høgsberg  <krh@redhat.com>

	* src/cairo-ft-font.c (_cairo_ft_unscaled_font_lock_face): Zero
	out 'entry', not 'unscaled' when evicting face from cache.

2005-08-13  Kristian Høgsberg  <krh@redhat.com>

	* src/cairo-ps-surface.c: (_ps_output_fill_rectangles): Fix a
	mismatch between printf arguments and format string (thanks to
	Adrian Johnson).
	
	* src/cairoint.h (cairo_printf_format): Add macro to mark printf
	like functions.

2005-08-13  Owen Taylor  <otaylor@redhat.com>

	* Makefile.am (DIST_SUBDIRS): Change docREEL back to doc.
	(Found by Kjartan Maraas)

2005-08-13  Carl Worth  <cworth@cworth.org>

	* NEWS: Fix typo ('internal' should have been 'external').

2005-08-13  Carl Worth  <cworth@cworth.org>

	* configure.in: Increment CAIRO_VERSION to 0.9.3 after tagging
	RELEASE_0_9_2.

	* Makefile.am (release-publish): Slight rewording of announcement
	email.

2005-08-13  Carl Worth  <cworth@cworth.org>

	* NEWS: Added notes for release 0.9.2.
	
	* configure.in: Increment CAIRO_VERSION to 0.9.2 and libtool
	versioning to 3:1:1.

	* RELEASING: Remove some more 'snapshot' language. Make it more
	clear that the libtool versioning numbers need to be updated.

2005-08-13  Carl Worth  <cworth@cworth.org>

	* src/cairo-pattern.c: Fix unterminated comment that eliminated
	cairo_pattern_add_color_stop_rgba.

2005-08-13  Carl Worth  <cworth@cworth.org>

	* NEWS: Add missing notes on soname and user-space locking for
	cairo_set_source() to the 0.9.0 release notes.
	
	* src/cairo-pattern.c: Document cairo_pattern_add_color_stop_rgb,
	cairo_pattern_add_color_stop_rgba, cairo_pattern_set_matrix, and
	cairo_pattern_get_matrix.
	
	* src/cairo.c: Add note on user-space locking to the documentation
	for cairo_set_source().

2005-08-13  Carl Worth  <cworth@cworth.org>

	* src/cairoint.h: Turn the mutex code back on. It looks like the
	deadlocks have disappeared as of the cairo_scaled_font_map patch
	from two days ago.
	